<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="105dp"
        android:background="@drawable/boder">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@null"
                    android:padding="10dp"
                    android:text="@string/lbl_login"
                    android:textColor="@color/hfff"
                    android:textSize="@dimen/font_size_35"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinput_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_login"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:textColorHint="#fff"
                    android:theme="@style/MyStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="90dp"
                        android:background="@null"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="10dp"
                        android:hint="@string/lbl_user_name"
                        android:inputType="text"
                        android:textColor="@color/hfff"
                        android:textColorHint="@color/hfff"
                        android:textSize="@dimen/font_size_16"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/hfff" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinput_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textinput_user"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:textColorHint="@color/hfff"
                    android:theme="@style/MyStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="90dp"
                        android:background="@null"
                        android:drawableLeft="@drawable/ic_password"
                        android:drawablePadding="10dp"
                        android:hint="@string/lbl_password"
                        android:inputType="textPassword"
                        android:textColor="@color/hfff"
                        android:textColorHint="@color/hfff"
                        android:textSize="@dimen/font_size_16"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/hfff" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/ck_rememberme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textinput_password"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:buttonTint="@color/hfff"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/lbl_remember_me"
                    android:textColor="@color/hfff" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ck_rememberme"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:background="@color/hE63241"
                    android:text="@string/lbl_login"
                    android:textColor="@color/hfff"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/linnerlayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_login"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="50dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:background="@color/hfff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/boderedittext"
                        android:gravity="center"
                        android:text="OR"
                        android:textColor="@color/hfff" />

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:background="@color/hfff" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_not_acount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linnerlayout"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    android:text="@string/lbl_txt_not_acount"
                    android:textColor="@color/h1231DD"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linnerlayout"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="50dp"
                    android:layout_toRightOf="@+id/txt_not_acount"
                    android:padding="5dp"
                    android:text="@string/lbl_create"
                    android:textColor="@color/hfff"
                    android:textStyle="bold|italic" />
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>


</LinearLayout>